= Changelog

== 0.4.6-dev unreleased

* Fix: Einzelanzeige Kontext zeigt jetzt die Tabellen Konnektoren/Karten korrekt.
* Update PIN-Status nach PIN-Verify, um die Änderung unmittelbar anzuzeigen.


== 0.4.5 - 2024-11-02

* Neu: TI-Lagebild
* Dokumentation zur PIN-Verifizierung ergänzt

== 0.4.4 - 2024-10-06

* Neu: Import von Client-Zertifikaten als P12-Datei

== 0.4.3 - 2024-10-03

* Update der Dokumentation
* Fix: keine SOAP-Abfrage, wenn der Konnektor noch keine SDS-Informationen hat.

== 0.4.2 - 2024-10-02

* Abfrage der SMC-K Daten vom Konnektor (ICCSN, Gültigkeit bis) (1x pro Tag)
* Aktualisierung des Card-Handles bei der Sammelaktion VerifyPin pro Kartenterminal.

== 0.4.1 - 2024-09-27

* Verbesserte Info-Ausgaben bei Nutzung der SMC-B Remote PIN
* Separate Übersicht veralteter Logeinträge mit der Möglichkeit alle zu löschen

== 0.4.0 - 2024-09-21

* Acknowledges und Notizen für Konnektoren, Karten und Kartenterminals
* Bugfix für Seitenaktualisierung bei Karte bei Aktion VerifyPin/GetPinStatus

== 0.3.8 - 2024-09-14

* xref:admin/smcb-remote-pin.adoc[Remote-SMC-B PIN Support für Orga6141]

== 0.3.7 - 2024-09-14

* Fix: Fehlermeldung bei erfolreicher Pin-Verifikation korrigiert
* Acknowledge-Button jetzt auch im Log-Bereich von Konnektor/Karte/Terminal (bisher: nur im Dashboard)

== 0.3.6 - 2024-09-10

* Neu: xref:user/acknowledges.adoc[Acknowledges und Notizen für Log-Einträge]

== 0.35 - 2024-08-31

* xref:admin/authorities.adoc[Erweiterung der Berechtigungsverwaltung]

== 0.34 - 2024-08-30

* Fix: Überprüfung auf doppelte MACs bei Kartenterminal
* Fix: Konnektoren ohne Kartenterminal liefern unvollständige SOAP-Nachricht
* Change: VerifyPin mit 2 Sekunden Delay zwischen zwei PIN-Eingaben
* Change: Klick auf Konnektor in Eventlogs im Dashboard ohne Anchor
* Change: Überarbeitung der Ausgaben bei VerifyPin, PinStatus und GetCard (einheitlich als Toast- statt Flash-Nachricht)