@@ -208,6 +208,12 @@
 <li>
 <p>Update PIN-Status nach PIN-Verify, um die Änderung unmittelbar anzuzeigen.</p>
 </li>
+<li>
+<p>Anzeige Arbeitsplätze überarbeitet; Löschfunktion für veraltete Arbeitsplätze</p>
+</li>
+<li>
+<p>Dokumentation für Arbeitsplätze ergänzt</p>
+</li>
 </ul>
 </div>
 </div>
